feat: upgrade packages

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -33,7 +33,10 @@
   "overrides": [
     {
       "files": ["**/__tests__/**/*.ts?(x)", "**/?(*.)+(spec|test).ts?(x)"],
-      "extends": ["plugin:testing-library/react"]
+      "extends": [
+        "plugin:@vitest/legacy-recommended",
+        "plugin:testing-library/react"
+      ]
     }
   ],
   "rules": {
@@ -63,9 +66,7 @@
     "jsx-a11y/label-has-associated-control": [
       2,
       {
-        "labelAttributes": [
-          "label"
-        ],
+        "labelAttributes": ["label"],
         "depth": 3
       }
     ],
@@ -73,10 +74,7 @@
       "error",
       {
         "props": true,
-        "ignorePropertyModificationsForRegex": [
-          "^state$",
-          "^ctx$"
-        ]
+        "ignorePropertyModificationsForRegex": ["^state$", "^ctx$"]
       }
     ],
     "react-hooks/rules-of-hooks": "error",
@@ -91,20 +89,14 @@
     "react/function-component-definition": [
       2,
       {
-        "namedComponents": [
-          "arrow-function",
-          "function-declaration"
-        ],
+        "namedComponents": ["arrow-function", "function-declaration"],
         "unnamedComponents": "arrow-function"
       }
     ],
     "react/jsx-filename-extension": [
       1,
       {
-        "extensions": [
-          ".ts",
-          ".tsx"
-        ]
+        "extensions": [".ts", ".tsx"]
       }
     ],
     "react/jsx-props-no-spreading": "off",
